--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 server.port=8889
-spring.datasource.url=jdbc:mysql://localhost:3306/employeedb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://mysql-standalone:3306/employeedb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
 spring.datasource.username=mani
 spring.datasource.password=mani1234
 spring.datasource.platform=mysql
