--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.5</version>
+		</dependency>
 
 	</dependencies>
 
@@ -72,9 +77,11 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<finalName>employee-crud-docker</finalName>
 				</configuration>
+
 			</plugin>
 		</plugins>
-		<finalName>employee-crud-docker</finalName>
+
 	</build>
 </project>
